--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -127,7 +127,7 @@
 <footer>
     <div class="container-fluid">
         <p class="text-gray-dark">
-            © 2017 - Spring-2017, CMPE 220, Computer Engineering at San Jose State University
+            Made with ❤️ by Raj
         </p>
     </div>
 </footer>
